src/main/br.com/parser/IsiLangParser.java
// Generated from C:/Users/kevin/IdeaProjects/Projeto-Compiladores\IsiLang.g4 by ANTLR 4.10.1

package parser;

import datastructs.IsiSymbol;
import datastructs.IsiSymbolTable;
import datastructs.IsiVariable;
import exceptions.IsiSemanticException;
import ast.IsiProgram;
import ast.AbstractCommand;
import ast.CommandLeitura;
import ast.CommandEscrita;
import ast.CommandAtribuicao;
import ast.CommandDecisao;

import java.util.ArrayList;
import java.util.Stack;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IsiLangParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, AP = 9,
            FP = 10, SC = 11, OP = 12, ATTR = 13, VIR = 14, ACH = 15, FCH = 16, OPREL = 17, ID = 18,
            NUMBER = 19, WS = 20;
    public static final int
            RULE_prog = 0, RULE_decl = 1, RULE_declaravar = 2, RULE_tipo = 3, RULE_bloco = 4,
            RULE_cmd = 5, RULE_cmdleitura = 6, RULE_cmdescrita = 7, RULE_cmdattrib = 8,
            RULE_cmdselecao = 9, RULE_expr = 10, RULE_termo = 11;

    private static String[] makeRuleNames() {
        return new String[]{
                "prog", "decl", "declaravar", "tipo", "bloco", "cmd", "cmdleitura", "cmdescrita",
                "cmdattrib", "cmdselecao", "expr", "termo"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'programa'", "'fimprog;'", "'numero'", "'texto'", "'leia'", "'escreva'",
                "'se'", "'senao'", "'('", "')'", "';'", null, "'='", "','", "'{'", "'}'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, "AP", "FP", "SC",
                "OP", "ATTR", "VIR", "ACH", "FCH", "OPREL", "ID", "NUMBER", "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "IsiLang.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }


    private int _tipo;
    private String _varName;
    private String _varValue;
    private IsiSymbolTable symbolTable = new IsiSymbolTable();
    private IsiSymbol symbol;
    private IsiProgram program = new IsiProgram();
    private ArrayList<AbstractCommand> curThread;
    private Stack<ArrayList<AbstractCommand>> stack = new Stack<ArrayList<AbstractCommand>>();
    private String _readID;
    private String _writeID;
    private String _exprID;
    private String _exprContent;
    private String _exprDecision;
    private ArrayList<AbstractCommand> listaTrue;
    private ArrayList<AbstractCommand> listaFalse;

    public void verificaID(String id) {
        if (!symbolTable.exists(id)) {
            throw new IsiSemanticException("Symbol " + id + " not declared");
        }
    }

    public void exibeComandos() {
        for (AbstractCommand c : program.getComandos()) {
            System.out.println(c);
        }
    }

    public void generateCode() {
        program.generateTarget();
    }

    public IsiLangParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public DeclContext decl() {
            return getRuleContext(DeclContext.class, 0);
        }

        public BlocoContext bloco() {
            return getRuleContext(BlocoContext.class, 0);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitProg(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitProg(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(24);
                match(T__0);
                setState(25);
                decl();
                setState(26);
                bloco();
                setState(27);
                match(T__1);
                program.setVarTable(symbolTable);
                program.setComandos(stack.pop());


            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclContext extends ParserRuleContext {
        public List<DeclaravarContext> declaravar() {
            return getRuleContexts(DeclaravarContext.class);
        }

        public DeclaravarContext declaravar(int i) {
            return getRuleContext(DeclaravarContext.class, i);
        }

        public DeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_decl;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterDecl(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitDecl(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclContext decl() throws RecognitionException {
        DeclContext _localctx = new DeclContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_decl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(31);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(30);
                            declaravar();
                        }
                    }
                    setState(33);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__2 || _la == T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclaravarContext extends ParserRuleContext {
        public TipoContext tipo() {
            return getRuleContext(TipoContext.class, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(IsiLangParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(IsiLangParser.ID, i);
        }

        public TerminalNode SC() {
            return getToken(IsiLangParser.SC, 0);
        }

        public List<TerminalNode> VIR() {
            return getTokens(IsiLangParser.VIR);
        }

        public TerminalNode VIR(int i) {
            return getToken(IsiLangParser.VIR, i);
        }

        public DeclaravarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_declaravar;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterDeclaravar(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitDeclaravar(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitDeclaravar(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclaravarContext declaravar() throws RecognitionException {
        DeclaravarContext _localctx = new DeclaravarContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_declaravar);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(35);
                tipo();
                setState(36);
                match(ID);

                _varName = _input.LT(-1).getText();
                _varValue = null;
                symbol = new IsiVariable(_varName, _tipo, _varValue);
                if (!symbolTable.exists(_varName)) {
                    symbolTable.add(symbol);
                } else {
                    throw new IsiSemanticException("Symbol " + _varName + " already declared");
                }

                setState(43);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == VIR) {
                    {
                        {
                            setState(38);
                            match(VIR);
                            setState(39);
                            match(ID);

                            _varName = _input.LT(-1).getText();
                            _varValue = null;
                            symbol = new IsiVariable(_varName, _tipo, _varValue);
                            if (!symbolTable.exists(_varName)) {
                                symbolTable.add(symbol);
                            } else {
                                throw new IsiSemanticException("Symbol " + _varName + " already declared");
                            }

                        }
                    }
                    setState(45);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(46);
                match(SC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TipoContext extends ParserRuleContext {
        public TipoContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_tipo;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterTipo(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitTipo(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitTipo(this);
            else return visitor.visitChildren(this);
        }
    }

    public final TipoContext tipo() throws RecognitionException {
        TipoContext _localctx = new TipoContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_tipo);
        try {
            setState(52);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__2:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(48);
                    match(T__2);
                    _tipo = IsiVariable.NUMBER;
                }
                break;
                case T__3:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(50);
                    match(T__3);
                    _tipo = IsiVariable.TEXT;
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BlocoContext extends ParserRuleContext {
        public List<CmdContext> cmd() {
            return getRuleContexts(CmdContext.class);
        }

        public CmdContext cmd(int i) {
            return getRuleContext(CmdContext.class, i);
        }

        public BlocoContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_bloco;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterBloco(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitBloco(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitBloco(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BlocoContext bloco() throws RecognitionException {
        BlocoContext _localctx = new BlocoContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_bloco);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                curThread = new ArrayList<AbstractCommand>();
                stack.push(curThread);

                setState(56);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(55);
                            cmd();
                        }
                    }
                    setState(58);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << ID))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CmdContext extends ParserRuleContext {
        public CmdleituraContext cmdleitura() {
            return getRuleContext(CmdleituraContext.class, 0);
        }

        public CmdescritaContext cmdescrita() {
            return getRuleContext(CmdescritaContext.class, 0);
        }

        public CmdattribContext cmdattrib() {
            return getRuleContext(CmdattribContext.class, 0);
        }

        public CmdselecaoContext cmdselecao() {
            return getRuleContext(CmdselecaoContext.class, 0);
        }

        public CmdContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterCmd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitCmd(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitCmd(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CmdContext cmd() throws RecognitionException {
        CmdContext _localctx = new CmdContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_cmd);
        try {
            setState(64);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__4:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(60);
                    cmdleitura();
                }
                break;
                case T__5:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(61);
                    cmdescrita();
                }
                break;
                case ID:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(62);
                    cmdattrib();
                }
                break;
                case T__6:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(63);
                    cmdselecao();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CmdleituraContext extends ParserRuleContext {
        public TerminalNode AP() {
            return getToken(IsiLangParser.AP, 0);
        }

        public TerminalNode ID() {
            return getToken(IsiLangParser.ID, 0);
        }

        public TerminalNode FP() {
            return getToken(IsiLangParser.FP, 0);
        }

        public TerminalNode SC() {
            return getToken(IsiLangParser.SC, 0);
        }

        public CmdleituraContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmdleitura;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterCmdleitura(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitCmdleitura(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitCmdleitura(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CmdleituraContext cmdleitura() throws RecognitionException {
        CmdleituraContext _localctx = new CmdleituraContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_cmdleitura);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                match(T__4);
                setState(67);
                match(AP);
                setState(68);
                match(ID);
                verificaID(_input.LT(-1).getText());
                _readID = _input.LT(-1).getText();

                setState(70);
                match(FP);
                setState(71);
                match(SC);

                IsiVariable var = (IsiVariable) symbolTable.get(_readID);
                CommandLeitura cmd = new CommandLeitura(_readID, var);
                stack.peek().add(cmd);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CmdescritaContext extends ParserRuleContext {
        public TerminalNode AP() {
            return getToken(IsiLangParser.AP, 0);
        }

        public TerminalNode ID() {
            return getToken(IsiLangParser.ID, 0);
        }

        public TerminalNode FP() {
            return getToken(IsiLangParser.FP, 0);
        }

        public TerminalNode SC() {
            return getToken(IsiLangParser.SC, 0);
        }

        public CmdescritaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmdescrita;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterCmdescrita(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitCmdescrita(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitCmdescrita(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CmdescritaContext cmdescrita() throws RecognitionException {
        CmdescritaContext _localctx = new CmdescritaContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_cmdescrita);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(74);
                match(T__5);
                setState(75);
                match(AP);
                setState(76);
                match(ID);
                verificaID(_input.LT(-1).getText());
                _writeID = _input.LT(-1).getText();

                setState(78);
                match(FP);
                setState(79);
                match(SC);

                CommandEscrita cmd = new CommandEscrita(_writeID);
                stack.peek().add(cmd);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CmdattribContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(IsiLangParser.ID, 0);
        }

        public TerminalNode ATTR() {
            return getToken(IsiLangParser.ATTR, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode SC() {
            return getToken(IsiLangParser.SC, 0);
        }

        public CmdattribContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmdattrib;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterCmdattrib(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitCmdattrib(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitCmdattrib(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CmdattribContext cmdattrib() throws RecognitionException {
        CmdattribContext _localctx = new CmdattribContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_cmdattrib);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                match(ID);
                verificaID(_input.LT(-1).getText());
                _exprID = _input.LT(-1).getText();

                setState(84);
                match(ATTR);
                _exprContent = "";
                setState(86);
                expr();
                setState(87);
                match(SC);

                CommandAtribuicao cmd = new CommandAtribuicao(_exprID, _exprContent);
                stack.peek().add(cmd);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CmdselecaoContext extends ParserRuleContext {
        public TerminalNode AP() {
            return getToken(IsiLangParser.AP, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(IsiLangParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(IsiLangParser.ID, i);
        }

        public TerminalNode OPREL() {
            return getToken(IsiLangParser.OPREL, 0);
        }

        public TerminalNode FP() {
            return getToken(IsiLangParser.FP, 0);
        }

        public List<TerminalNode> ACH() {
            return getTokens(IsiLangParser.ACH);
        }

        public TerminalNode ACH(int i) {
            return getToken(IsiLangParser.ACH, i);
        }

        public List<TerminalNode> FCH() {
            return getTokens(IsiLangParser.FCH);
        }

        public TerminalNode FCH(int i) {
            return getToken(IsiLangParser.FCH, i);
        }

        public TerminalNode NUMBER() {
            return getToken(IsiLangParser.NUMBER, 0);
        }

        public List<CmdContext> cmd() {
            return getRuleContexts(CmdContext.class);
        }

        public CmdContext cmd(int i) {
            return getRuleContext(CmdContext.class, i);
        }

        public CmdselecaoContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_cmdselecao;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterCmdselecao(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitCmdselecao(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitCmdselecao(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CmdselecaoContext cmdselecao() throws RecognitionException {
        CmdselecaoContext _localctx = new CmdselecaoContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_cmdselecao);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                match(T__6);
                setState(91);
                match(AP);
                setState(92);
                match(ID);
                _exprDecision = _input.LT(-1).getText();
                setState(94);
                match(OPREL);
                _exprDecision += _input.LT(-1).getText();
                setState(96);
                _la = _input.LA(1);
                if (!(_la == ID || _la == NUMBER)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                _exprDecision += _input.LT(-1).getText();
                setState(98);
                match(FP);
                setState(99);
                match(ACH);
                curThread = new ArrayList<AbstractCommand>();
                stack.push(curThread);

                setState(102);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(101);
                            cmd();
                        }
                    }
                    setState(104);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << ID))) != 0));
                setState(106);
                match(FCH);

                listaTrue = stack.pop();

                setState(119);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__7) {
                    {
                        setState(108);
                        match(T__7);
                        setState(109);
                        match(ACH);

                        curThread = new ArrayList<AbstractCommand>();
                        stack.push(curThread);

                        {
                            setState(112);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            do {
                                {
                                    {
                                        setState(111);
                                        cmd();
                                    }
                                }
                                setState(114);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << ID))) != 0));
                        }
                        setState(116);
                        match(FCH);

                        listaFalse = stack.pop();
                        CommandDecisao cmd = new CommandDecisao(_exprDecision, listaTrue, listaFalse);
                        stack.peek().add(cmd);

                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExprContext extends ParserRuleContext {
        public List<TermoContext> termo() {
            return getRuleContexts(TermoContext.class);
        }

        public TermoContext termo(int i) {
            return getRuleContext(TermoContext.class, i);
        }

        public List<TerminalNode> OP() {
            return getTokens(IsiLangParser.OP);
        }

        public TerminalNode OP(int i) {
            return getToken(IsiLangParser.OP, i);
        }

        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).enterExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IsiLangListener) ((IsiLangListener) listener).exitExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof IsiLangVisitor) return ((IsiLangVisitor<? extends T>) visitor).visitExpr(this);
            else return visitor.visitChildren(this);
        }
    }
